--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,31 @@
 
 .favorites {
   width: 50%;
-  float:left;
+  float: left;
 }
 
-img{
+img {
   width: 300px;
 }
 
 .squares {
   display: block;
+  width: 300px;
+  border: 1px solid black;
+  padding: 5px;
+ background-color: #f0f0f0;
+
 }
 
-/*.rmvBtn {
-  float: left;
-
+.rmvBtn {
+  height: 20px;
+  width: 145px;
+  background-color: white;
 }
 
-.favBtn{
-
-float: right;
-}*/
+.favBtn {
+  height: 20px;
+  width: 145px;
+  margin-left: 10px;
+  background-color: white;
+}
